--- a/index.html
+++ b/index.html
@@ -3,28 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Hierarquia de titulos</title>
+    <title>Meu primeiro exercicio</title>
 </head>
 <body>
-    <h1>Entendendo Portugual</h1>
-    <h2>Introdução</h2>
-    <h3>Justificaçao da tematica</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro libero praesentium voluptas totam quibusdam ipsam nostrum facilis, fuga quis veniam amet optio. Deleniti iste, doloremque eveniet eligendi ut error maiores.</p>
-    <h3>Caráter excepcional</h3>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere obcaecati iusto repudiandae. Et similique commodi minima exercitationem nihil saepe inventore labore, consectetur animi, laudantium fugit repellat obcaecati officia? Quibusdam, porro.</p>  <!--A opção loren inclui um texto-->
-    <h3>Perguntas de partida</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quod, atque magni provident totam ut distinctio maxime repudiandae iste natus fugit perferendis, officiis neque obcaecati praesentium deleniti sed enim quidem.</p>
-    <h3>Metotologia de investigação</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis magni cumque harum commodi, fugit autem alias neque accusantium ipsam aliquam consectetur, deserunt sint blanditiis velit, ullam optio laboriosam corporis doloribus.</p>
-    <h4>Etapas de investigaçao</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia aperiam architecto, dolore cupiditate modi nesciunt in aliquid quis iusto illo, nulla ipsa fugiat soluta velit maxime ratione corrupti quasi assumenda!</p>
-    <h4>Instrumentos de planejamento</h4>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio suscipit provident reiciendis cum perspiciatis illum corrupti alias sequi repellendus dolore quae ipsam rem quaerat, magnam quod architecto debitis eum non!</p>
-    <h2>Ordenamento do territorio em portugual</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus exercitationem at rem cum consequuntur doloribus voluptates doloremque facilis! Aperiam veniam velit voluptates quasi rerum at praesentium. Adipisci earum exercitationem labore!o</p>
-    <h3>Os instrumentos de Analise</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore amet repudiandae sapiente nihil nesciunt, eum, alias nam officiis temporibus explicabo dolorum vero commodi ab, ducimus corrupti atque. Sequi, autem atque?</p>
-    
+    <h1>Olá,Mundo!</h1>
+    <hr>
+    <p>Esse é o meu primeiro documento HTML! Estou muito feliz!</p>  
+    <p>Este é um momento único! Estou criando um site!</p>  
 </body>
 </html>
