--- a/index.html
+++ b/index.html
@@ -3,12 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu primeiro exercicio</title>
+    <title>Formatação de textos</title>
+
 </head>
 <body>
-    <h1>Olá,Mundo!</h1>
-    <hr>
-    <p>Esse é o meu primeiro documento HTML! Estou muito feliz!</p>  
-    <p>Este é um momento único! Estou criando um site!</p>  
+    <h1>Principais formatações</h1>
+    <h2>Negrito/destaque</h2>
+    <p>Nessa frase temos um <b>termo em negrito</b>usando a tag B (Não Semântica)</p>
+    <p>Nessa frase temos um <strong>Termo em destaque</strong>(Semântica)</p>
+    <h2>Italico/ênfase</h2>
+    <p>Nesta frase temos um <i>termo em italico</i> usando a tag i (Não semantica)</p>
+    <p>Nesta frase temos um <em>termo em ênfase</em> usando a tag em (Semântica)</p>
+    <h2>Texto marcado</h2>
+    <p>Podemos criar tambem um <mark style="background-color: rgb(112, 235, 240);">texto marcado</mark> usando a tag MARK</p>
+    <p>E no outro paragrafo temos <mark>outro texto marcado no final</mark></p>
+    <h2>Texto grande e pequeno</h2>
+    <p>Estamos criando um <big>texto grande</big> e um <small>texto pequeno</small> nesse paragrafo</p>
+    <h2>Texto deletado</h2>
+    <p>Podemos marcar um <del>texto excluido</del> para indicar que ele deve ser lido mais nao considerado</p>
+    <p>Podemos marcar um <ins>texto inserido</ins> para dar uma ênfase e indicar que ele foi adicionado depois</p>
+    <p>Existe tambem o <u>sublinhado</u> com a tag U (Não semântica)</p>
+    <h2>Sobrescrito</h2>
+    <p>Para inserir coisas do tipo <sup>x20</sup>+3</p>
+    <h2>Texto subscrito</h2>
+    <p>Para inserir coisas do tipo H<sub>2</sub>0</p>
+
+    
 </body>
 </html>
